# ChangeLog for games-action/openlierox
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 May 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  openlierox-0.57_beta5.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

  15 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  -openlierox-0.57_beta3.ebuild, +openlierox-0.57_beta5.ebuild:
  Version bump (bug #164009)
