@@ -1,3 +1,3 @@
 DIST OpenLieroX_0.57_beta5.src.tar.bz2 44710556 RMD160 9ea2d4d979955069c3ff9ebe3c02b59de8da1c4c SHA1 14044c2f9a3119a6b5e9d8369816630721729fbd SHA256 9a70e828cbeb039ef6af32dd68e1817182147d860de97460ed6ca7071135de4a
-EBUILD openlierox-0.57_beta5.ebuild 1771 RMD160 2dcf7e6f5c621d168528849adf7c7f0aa15d2dbe SHA1 981efdf7b9a3c35fb0893650bd91aece981675c7 SHA256 b8c7ae977e405d30521161310efa673aea9df93819d8dd5c0c0053cf696142b2
-MISC ChangeLog 425 RMD160 39546ab516e37ec54a9867a4b5f66e88266fc123 SHA1 349da39ee062b7651fd614b6f1ae773bc60f03a2 SHA256 909e530f11bc52c9d6babbde61b7d1a4f71607a93f0cc8668b771b950df93381
+EBUILD openlierox-0.57_beta5.ebuild 1725 RMD160 3af401573b5b1ed22d3a0927d34b9c267f1adf9a SHA1 de348bf80d4d5a78831a34ecf7245587ac3d91e0 SHA256 3338687e3316f73c15a8500d0da3ec9d65623db24bb301fc28779df6226352cd
+MISC ChangeLog 544 RMD160 cc4b962934379ff55aa9718b26082d222275b700 SHA1 2bff376e2776ada3e9e22ce684ef50f34cf20cd9 SHA256 2491ed8118ffcbde5d0321499d1aeeb1fcb921ba4d8cf0ca36d664efa643b9f7
