@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl>
+  openlierox-0.57_beta5.ebuild:
+  Fixed some repoman reported errors.
+
   01 May 2008; Piotr Szymaniak <lazy_bum@o2.pl>
   openlierox-0.57_beta5.ebuild:
   Remove icon extension from desktop entry to match Icon Theme Specification.
